crates/xlate/tests/snapshots/golden_matrix__output_json_object_without_word_json__gpt-4o-mini__20260910__chat_to_responses__gpt4o.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-4o",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Give the capital of France as an object with a city field."
        }
      ]
    }
  ],
  "text": {
    "format": {
      "type": "json_object"
    }
  },
  "max_output_tokens": 64
}
--- headers ---
content-type: application/json
upstream_streams: false
--- degraded ---
